refactor: map the V2 read model onto active-rows views
Add active-rows database views (split into per-view changesets) and
serve the V2 read model from them, dropping removed rows from the V2
surface. Replace Object[] rows with interface projections, read search
from active_search_index skipping unknown rows instead of failing, and
move V2 persistence classes into the persistence.v2 package.

Also surface global configuration expiry in logs and the V2 heartbeat,
and detect OpenAPI JSON vs YAML with a prefix check instead of parsing.

Co-Authored-By: Claude <noreply@anthropic.com>